--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
   --accent-color: #2196f3;
   --main-font: "Roboto", sans-serif;
   --secondary-font: "Raleway", sans-serif;
+  --secondary-color: #ffff;
+
 }
 
 /* ======= FOR ALL LINKS AND LISTS ====== */
@@ -28,9 +30,9 @@ p {
 
 ul,
 ol {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 img {
@@ -47,29 +49,27 @@ img {
 }
 
 .container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-}
-
-.content,
-.footer-content,
-.header-content {
-  width: 1200px;
+    width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  
 }
 
-.content {
-  padding: 94px 0;
-}
+
+
 
 /* ======== HEADER SECTION ======== */
+
+.header {
+ border-bottom: 1px solid #ececec;
+}
+
 
 .header-container {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #ececec;
 }
 
 .navigation {
@@ -77,8 +77,8 @@ img {
   align-items: center;
   width: 1200px;
   height: 80px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
+
 }
 
 .menu {
@@ -102,7 +102,6 @@ img {
 }
 
 .menu-item:not(:last-child) {
-  list-style: none;
   margin-right: 50px;
 }
 
@@ -170,45 +169,47 @@ img {
 /* ========= MAIN CONTENT SECTION ========= */
 
 /* HERO SECTION*/
-.hero-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.hero {
+  
   background-color: #2f303a;
-  width: 1600px;
-  height: 600px;
+  
+  padding: 200px 0;
 }
 
 .hero-title {
   font-family: var(--main-font);
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffff;
+  color: var(--secondary-color);
+  max-width: 696px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
 }
 
-.hero-section {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 696px;
-}
+
 .modal-btn {
+  display: block;
   font-family: var(--main-font);
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
-  color: #ffff;
+  color: var(--secondary-color);
   background-color: var(--accent-color);
   cursor: pointer;
   background: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px 32px;
-  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  margin: 0 auto;
+  
+  
 }
 
 .modal-btn:hover,
@@ -222,14 +223,28 @@ img {
 
 /*  ABOUT SECTION  */
 
+.about-section {
+padding: 94px 0;
+}
+
+.upper-section {
+ max-width: 1170px;
+}
+
 .upper-section-list {
   display: flex;
   justify-content: space-between;
-  padding-top: 94px;
+ 
 }
 
 .upper-section-item {
-  width: 270px;
+  margin-left: 30px;
+ 
+}
+
+.down-section {
+  max-width: 1170px;
+
 }
 .down-section-list {
   display: flex;
@@ -238,6 +253,8 @@ img {
 
 .down-section-item {
   margin-top: 50px;
+  margin-bottom: 94px;
+  
 }
 
 .title {
@@ -264,18 +281,24 @@ img {
 /* OUR TEAM SECTION */
 
 .our-team-section {
-  display: flex;
-  justify-content: center;
-}
-
-.our-team-container {
+  padding: 94px 0;
   background-color: #f5f4fa;
 }
 
+.our-team-content {
+  max-width: 1170px;
+}
+
+.our-team-list {
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+
+
 .our-team-item {
-  margin-top: 50px;
-  margin-right: 30px;
-  background: #ffffff;
+  background: var(--secondary-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -296,6 +319,7 @@ img {
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+  margin-bottom: 50px;
 }
 
 .workers-name {
@@ -329,17 +353,37 @@ img {
   background-color: #2f303a;
 }
 
-.footer-logo {
-  color: #ffff;
+.footer-content {
+  padding: 60px 15px;
+  max-width: 1170px;
 }
+
+.footer-logo {
+  color:var(--secondary-color);
+ 
+}
+
+.footer-list {
+  margin-top: 20px;
+}
+
+.footer-item:not(:last-child){
+  margin-bottom: 9px;
+}
+
+
+
+
 
 .footer-adress-link {
   font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #ffff;
+  color:var(--secondary-color);
+  
 }
+
 
 .footer-mail-link,
 .footer-tel-link {
@@ -348,11 +392,28 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+  
 }
 
 /* ========= END FOOTER SECTION ============ */
 
 /*------ PORTFOLIO ------*/
+
+.main-content {
+  padding: 94px 0;
+}
+
+.tabs-list {
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 56px;
+  justify-content: center;
+  text-align: center;
+}
+
+.tabs-item {
+  border-radius: 4px;
+}
 
 .filter-btn {
   font-family: var(--main-font);
@@ -364,7 +425,16 @@ img {
   color: #212121;
   background-color: #f5f4fa;
   cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
 }
+
+.tabs-item:not(:last-child) {
+margin-right: 8px;
+}
+
 
 .filter-btn:hover,
 .filter-btn:focus {
@@ -372,7 +442,27 @@ img {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-  color: #ffff;
+  color:var(--secondary-color);
+ 
+}
+
+.projects-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: -30px;
+}
+
+.project-item {
+  margin-bottom: 30px;
+  
+}
+
+.project-details {
+  height: 110px;
+  border: 1px solid #EEEEEE;
+  padding: 20px 24px;
+
 }
 
 .project-title {
@@ -382,6 +472,7 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: #212121;
+  
 }
 
 .project-category {
