--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,11 @@ img {
   
 }
 
+.content-section {
+  padding-bottom: 94px;
+
+}
+
 
 
 
@@ -64,6 +69,7 @@ img {
 
 .header {
  border-bottom: 1px solid #ececec;
+ padding: 24px 0 25px 0;
 }
 
 
@@ -75,8 +81,8 @@ img {
 .navigation {
   display: flex;
   align-items: center;
-  width: 1200px;
-  height: 80px;
+  width: 100%;
+ 
   padding: 0 15px;
 
 }
@@ -124,7 +130,8 @@ img {
   color: var(--accent-color);
 }
 
-.head-info {
+
+.head-info-list {
   list-style: none;
   display: flex;
   align-items: center;
@@ -152,6 +159,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: #757575;
+  white-space: nowrap;
 }
 
 .head-tel-link:hover,
@@ -227,9 +235,7 @@ img {
 padding: 94px 0;
 }
 
-.upper-section {
- max-width: 1170px;
-}
+
 
 .upper-section-list {
   display: flex;
@@ -242,20 +248,13 @@ padding: 94px 0;
  
 }
 
-.down-section {
-  max-width: 1170px;
 
-}
 .down-section-list {
   display: flex;
   justify-content: space-between;
 }
 
-.down-section-item {
-  margin-top: 50px;
-  margin-bottom: 94px;
-  
-}
+
 
 .title {
   font-family: var(--main-font);
@@ -265,6 +264,7 @@ padding: 94px 0;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+  
 }
 
 .subtitle {
@@ -285,9 +285,6 @@ padding: 94px 0;
   background-color: #f5f4fa;
 }
 
-.our-team-content {
-  max-width: 1170px;
-}
 
 .our-team-list {
   display: flex;
@@ -305,10 +302,8 @@ padding: 94px 0;
 }
 
 .worker-details-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 108px;
+  padding: 30px 0;
+
 }
 
 .main-title {
@@ -351,12 +346,11 @@ padding: 94px 0;
 
 .footer {
   background-color: #2f303a;
+  padding: 60px 15px;
+
 }
 
-.footer-content {
-  padding: 60px 15px;
-  max-width: 1170px;
-}
+
 
 .footer-logo {
   color:var(--secondary-color);
@@ -406,7 +400,7 @@ padding: 94px 0;
 .tabs-list {
   display: flex;
   margin: 0 auto;
-  margin-bottom: 56px;
+  margin-bottom: 50px;
   justify-content: center;
   text-align: center;
 }
@@ -425,7 +419,6 @@ padding: 94px 0;
   color: #212121;
   background-color: #f5f4fa;
   cursor: pointer;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   border: none;
   padding: 6px 22px;
@@ -449,12 +442,18 @@ margin-right: 8px;
 .projects-list{
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   margin-bottom: -30px;
+
 }
 
-.project-item {
+.project-item{
   margin-bottom: 30px;
+  margin-right: 30px;
+  
+}
+
+.project-item:nth-child(3n) {
+  margin-right: 0;
   
 }
 
@@ -462,6 +461,7 @@ margin-right: 8px;
   height: 110px;
   border: 1px solid #EEEEEE;
   padding: 20px 24px;
+ 
 
 }
 
